--- a/templates/ctb/management_page.html
+++ b/templates/ctb/management_page.html
@@ -25,59 +25,59 @@
 {% endblock %}
 
 {% block subcontent %}
-    <p>The project is overseen by a number of committees/panels, which were established in consultation with
-        the financial sponsors of the project and the Ministers of Health in Ukraine and Russia. The current
-        management structure reflects the ways in which the project has evolved and will move forward. From
-        time to time subprojects may require expert input, which may be provided by a dedicated Group
-        operating for a fixed time period. A schema of the project management is shown in the figure. The
-        responsibility for the project as a whole is taken by the Steering Committee (SC) and all Panels
-        report to the SC, either directly or through the Scientific Advisory Board (SAB). The composition
-        and responsibilities of the SC, the Scientific Advisory Board, the Pathology Panel and the External
-        Review Panel (ERP) are described below.</p>
-    <p><img title="Chernobyl tissue bank diagram 01"
-            src="{% static 'img/chernobyl-tissue-bank-diagram-01.png' %}" alt="" width="100%" height="auto">
-    </p>
-    <h5 class="mt-5">Steering Committee (SC)</h5>
-    <p>The Steering Committee is composed of one representative from each of the funding bodies (currently
-        the National Cancer Institute of the United States of America, and the Sasakawa Health Foundation of
-        Japan), and a senior representative from the IEM, Ukraine and MRRC, Russia, representing the
-        relevant Ministry. If a representative is unable to attend a meeting, the funding organization or
-        Ministry concerned may appoint a deputy to take his or her place.</p>
-    <p>The role of the Steering Committee is to:</p>
-    <ul>
-        <li>Provide strategic direction regarding the development of the project, in particular the
-            collection and use of the samples and information collated by the CTB.
-        </li>
-        <li>Monitor the progress and financial management of the CTB</li>
-        <li>Provide arbitration, when necessary, on matters referred to it by the CTB subsidiary panels.
-        </li>
-    </ul>
-    <p>The SC will normally meet annually and will receive a project report, the 5-year budget plan and
-        Minutes of the other CTB committees and Working groups.</p>
-    <h5 class="mt-5">Scientific Advisory Group (SAG)</h5>
-    <p>The SAG currently compromises experts in clinical diagnosis and treatment and moleular biology of
-        thyroid cancer, and bioinformatics.</p>
-    <p>The role of the SAG</p>
-    <ol>
-        <li>Advise on scientific development of the CTB</li>
-        <li>Advise the CTB on current worldwide perspective and activity relevant to the project</li>
-        <li>Comment on quality control and ethical arrangements for the project</li>
-        <li>Assist/advise the Steering Committee on those applications for which the ERP has been unable to
-            agree a consensus decision (see below).
-        </li>
-    </ol>
-    <h5 class="mt-5">Pathology Panel</h5>
-    <p>This panel comprises members nominated by each of the Eastern European governments and the sponsoring
-        organisations. The Pathology Panel is responsible for the review of histological material and
-        assignment of a consensus diagnosis for each specimen housed in the CTB. The Pathology Panel also
-        reviews cases of thyroid cancer and benign disease from patients enrolled in NCI-sponsored
-        epidemiological studies. New cases consented for the CTB in Ukraine and Russia are initially
-        reviewed remotely by the Pathology Panel from high quality digital images. Those cases for which a
-        consensus diagnosis cannot be reached by remote review, or which a member wishes to discuss, are
-        flagged for review at the next meeting of the Panel. Meetings are scheduled every 12-18 months. A
-        case will only be included in the CTB once a consensus diagnosis has been agreed.</p>
-    <h5 class="mt-5">External Review Panel</h5>
-    <p>The External Review Panel is responsible for the review of all applications for access to the
-        resources of the CTB.<br>From time to time other subcommittees are convened to oversee specialist
-        areas of the project.</p>
+    <p>The project is overseen by a number of committees/panels, which were established in consultation with the
+        financial sponsors of the project and the Ministers of Health in Ukraine. The current management structure
+        reflects the ways in which the project has evolved and will move forward. From time to time subprojects may
+        require expert input, which may be provided by a dedicated Group operating for a fixed time period.
+{#        A schema of#}
+{#        the project management is shown in the figure.#}
+        The responsibility for the project as a whole is taken by the
+        Steering Committee (SC) and all Panels report to the SC, either directly or through the Scientific Advisory
+        Board (SAB).</p>
+{#    <p><img title="Chernobyl tissue bank diagram 01"#}
+{#            src="{% static 'img/chernobyl-tissue-bank-diagram-01.png' %}" alt="" width="100%" height="auto">#}
+{#    </p>#}
+{#    <h5 class="mt-5">Steering Committee (SC)</h5>#}
+{#    <p>The Steering Committee is composed of one representative from each of the funding bodies (currently#}
+{#        the National Cancer Institute of the United States of America, and the Sasakawa Health Foundation of#}
+{#        Japan), and a senior representative from the IEM, Ukraine and MRRC, Russia, representing the#}
+{#        relevant Ministry. If a representative is unable to attend a meeting, the funding organization or#}
+{#        Ministry concerned may appoint a deputy to take his or her place.</p>#}
+{#    <p>The role of the Steering Committee is to:</p>#}
+{#    <ul>#}
+{#        <li>Provide strategic direction regarding the development of the project, in particular the#}
+{#            collection and use of the samples and information collated by the CTB.#}
+{#        </li>#}
+{#        <li>Monitor the progress and financial management of the CTB</li>#}
+{#        <li>Provide arbitration, when necessary, on matters referred to it by the CTB subsidiary panels.#}
+{#        </li>#}
+{#    </ul>#}
+{#    <p>The SC will normally meet annually and will receive a project report, the 5-year budget plan and#}
+{#        Minutes of the other CTB committees and Working groups.</p>#}
+{#    <h5 class="mt-5">Scientific Advisory Group (SAG)</h5>#}
+{#    <p>The SAG currently compromises experts in clinical diagnosis and treatment and moleular biology of#}
+{#        thyroid cancer, and bioinformatics.</p>#}
+{#    <p>The role of the SAG</p>#}
+{#    <ol>#}
+{#        <li>Advise on scientific development of the CTB</li>#}
+{#        <li>Advise the CTB on current worldwide perspective and activity relevant to the project</li>#}
+{#        <li>Comment on quality control and ethical arrangements for the project</li>#}
+{#        <li>Assist/advise the Steering Committee on those applications for which the ERP has been unable to#}
+{#            agree a consensus decision (see below).#}
+{#        </li>#}
+{#    </ol>#}
+{#    <h5 class="mt-5">Pathology Panel</h5>#}
+{#    <p>This panel comprises members nominated by each of the Eastern European governments and the sponsoring#}
+{#        organisations. The Pathology Panel is responsible for the review of histological material and#}
+{#        assignment of a consensus diagnosis for each specimen housed in the CTB. The Pathology Panel also#}
+{#        reviews cases of thyroid cancer and benign disease from patients enrolled in NCI-sponsored#}
+{#        epidemiological studies. New cases consented for the CTB in Ukraine and Russia are initially#}
+{#        reviewed remotely by the Pathology Panel from high quality digital images. Those cases for which a#}
+{#        consensus diagnosis cannot be reached by remote review, or which a member wishes to discuss, are#}
+{#        flagged for review at the next meeting of the Panel. Meetings are scheduled every 12-18 months. A#}
+{#        case will only be included in the CTB once a consensus diagnosis has been agreed.</p>#}
+{#    <h5 class="mt-5">External Review Panel</h5>#}
+{#    <p>The External Review Panel is responsible for the review of all applications for access to the#}
+{#        resources of the CTB.<br>From time to time other subcommittees are convened to oversee specialist#}
+{#        areas of the project.</p>#}
 {% endblock %}
