--- a/templates/ctb/material_available.html
+++ b/templates/ctb/material_available.html
@@ -27,7 +27,7 @@
 
 {% block subcontent %}
     <p><strong>Material available </strong></p>
-    <p>The study cohort includes all those who were resident in the areas of Ukraine and Russia contaminated
+    <p>The study cohort includes all those who were resident in the areas of Ukraine contaminated
         by radioactive fallout from the accident and who were aged under 19 at exposure (i.e. born after
         26<sup>th</sup> April 1967). Thyroid cancer in those who were children or adolescents at exposure is
         the only cancer to have shown a substantial increase in these areas and it is clearly related to
@@ -40,13 +40,11 @@
         but by virtue of the fact that they were born after 1/1/87 have not been exposed to radioiodine.&nbsp;
         This is an extremely valuable cohort that serves as a control population for thyroid cancer
         associated with radioiodine exposure.</p>
-    <p>The CTB collects a variety of different types of biospecimen from patients undergoing operations for
-        thyroid cancer or adenoma in the Institute of Endocrinology and Metabolism in Kiev, Ukraine and the
-        A. Tsyb Medical Radiological Research Centre in Obninsk, Russian Federation who consent to donate to
-        the project. Tissue is collected to an approved standard operating procedure (SOP) and is snap
-        frozen; the presence or absence of tumor is verified by frozen section. A representative paraffin
-        block is also obtained for each case. Where appropriate, we also collect fresh and paraffin-embedded
-        tissue from loco-regional metastases.</p>
+    <p>The CTB collects a variety of biospecimen from patients undergoing operations for thyroid cancer or adenoma at
+        the Institute of Endocrinology and Metabolism in Kiev, Ukraine who consent to donate to the project. Tissue
+        collection follows an approved standard operating procedure (SOP) and is snap frozen; the presence or absence of
+        tumor is verified by frozen section. A representative paraffin block is also obtained for each case. Where
+        appropriate, we also collect fresh and paraffin-embedded tissue from loco-regional metastases.</p>
     <p>Histological slides from all tumors are reviewed by the CTB Pathology Panel - an international group
         of expert thyroid pathologists, and a consensus diagnosis agreed before any materials are released
         to researchers.</p>
@@ -60,99 +58,60 @@
     <p>For information on how you can apply to access biomaterials or research data <a
             href="{% url 'access_to_materials' %}">click here</a>.<br><br>The on-line application process allows a
         potential applicant to review whether samples or data matching the researchers search criteria are
-        available in the CTB. The table below provides a summary of the cumulative total of cases from
-        Ukraine and the Russian Federation, which have been reviewed by the Pathology Panel and a consensus
-        diagnosis agreed; the number of cases for which frozen material is available is given in brackets.
+        available in the CTB. The table below provides a summary of the cumulative total of cases from Ukraine which have been reviewed by the Pathology Panel and a consensus diagnosis agreed; the number of cases for which frozen material is available is given in brackets.
     </p>
     <table class="table table-striped mb-5">
+        <caption>Table updated on May 24th, 2023</caption>
         <thead>
         <tr>
-            <th>Diagnosis</th>
-            <th colspan="2">Ukraine</th>
-            <th colspan="2">Russia</th>
-            <th colspan="2">Total</th>
+            <th class="text-end">Diagnosis</th>
+            <th class="text-center" colspan="2">Cases in Ukraine</th>
         </tr>
         </thead>
         <tbody>
         <tr>
-            <td>Papillary Carcinoma (incl micro PTC)</td>
-            <td>2438</td>
-            <td>(1922)</td>
-            <td>938</td>
-            <td>(691)</td>
-            <td>3376</td>
-            <td>(2613)</td>
+            <td class="text-end">Papillary Carcinoma (incl micro PTC)</td>
+            <td class="text-end">2,463</td>
+            <td class="text-start">(2,185)</td>
         </tr>
         <tr>
-            <td>Follicular Carcinoma</td>
-            <td>121</td>
-            <td>(103)</td>
-            <td>34</td>
-            <td>(28)</td>
-            <td>155</td>
-            <td>(131)</td>
+            <td class="text-end">Follicular Carcinoma</td>
+            <td class="text-end">122</td>
+            <td class="text-start">(122)</td>
         </tr>
         <tr>
-            <td>Medullary Carcinoma</td>
-            <td>57</td>
-            <td>(48)</td>
-            <td>32</td>
-            <td>(22)</td>
-            <td>89</td>
-            <td>(70)</td>
+            <td class="text-end">Medullary Carcinoma</td>
+            <td class="text-end">58</td>
+            <td class="text-start">(58)</td>
         </tr>
         <tr>
-            <td>Other thyroid cancers<br>(WDCA NOS, PDC)</td>
-            <td>77</td>
-            <td>(67)</td>
-            <td>31</td>
-            <td>(24)</td>
-            <td>108</td>
-            <td>(91)</td>
+            <td class="text-end">Other thyroid cancers<br>(WDCA NOS, PDC)</td>
+            <td class="text-end">111</td>
+            <td class="text-start">(75)</td>
         </tr>
         <tr>
-            <td>Follicular Adenoma</td>
-            <td>708</td>
-            <td>(562)</td>
-            <td>299</td>
-            <td>(236)</td>
-            <td>1007</td>
-            <td>(798)</td>
+            <td class="text-end">Follicular Adenoma</td>
+            <td class="text-end">729</td>
+            <td class="text-start">(729)</td>
         </tr>
         <tr>
-            <td>Other Benign Follicular Tumors<br>(FT UMP and WDT UMP)</td>
-            <td>143</td>
-            <td>(124)</td>
-            <td>77</td>
-            <td>(59)</td>
-            <td>220</td>
-            <td>(183)</td>
+            <td class="text-end">Other Benign Follicular Tumors<br>(FT UMP and WDT UMP)</td>
+            <td class="text-end">143</td>
+            <td class="text-start">(124)</td>
         </tr>
         <tr>
-            <td>Miscellaneous Thyroid Tumors&nbsp;<br>(Other and Nodule, TTT)</td>
-            <td>158</td>
-            <td>(104)</td>
-            <td>115</td>
-            <td>(96)</td>
-            <td>273</td>
-            <td>(200)</td>
+            <td class="text-end">Miscellaneous Thyroid Tumors&nbsp;<br>(Other and Nodule, TTT)</td>
+            <td class="text-end">155</td>
+            <td class="text-start">(147)</td>
         </tr>
         <tr>
-            <td>Total</td>
-            <td>3702</td>
-            <td>(2930)</td>
-            <td>1526</td>
-            <td>(1156)</td>
-            <td>5228</td>
-            <td>(4086)&nbsp;</td>
+            <td class="text-end">Total</td>
+            <td class="text-end">4,052</td>
+            <td class="text-start">(3,762)</td>
         </tr>
         </tbody>
     </table>
-    <p><strong>Table updated 18<sup>th</sup>&nbsp;November 2019</strong></p>
-    <p>The total number of cases included in the CTB from Ukraine and Russia is 5228. Of these 69% are
-        resident in the contaminated oblasts and 83% of these were born before 1<sup>st </sup>December 1986
-        and therefore exposed to radioiodine at 3 months of intrauterine age or older. A total of 17% were
-        born after 1<sup>st</sup> December 1986 and therefore not exposed to radioiodine in fallout.</p>
+
     <p><strong>More information:</strong></p>
     <p><a href="{% url 'nucleic_acids_and_paraffin_sections' %}">Aliquots of nucleic acid</a><br><a
             href="{% url 'nucleic_acids_and_paraffin_sections' %}">Paraffin sections</a> <br><a
