--- a/templates/ctb/contact.html
+++ b/templates/ctb/contact.html
@@ -16,10 +16,11 @@
 {% endblock %}
 
 {% block content %}
-    <div class="row justify-content-center">
-        <div class="col-lg-4 pt-5">
-            If you would like any further information or have any queries regarding the Tissue Bank, please
-            contact:
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-6 pt-5">
+                If you would like any further information or have any queries regarding the Tissue Bank, please
+                contact:
                 <div class="card my-3">
                     <div class="card-header py-3 px-5">
                         <div class="fw-bold">Stephen J. Chanock, M.D.</div>
@@ -32,7 +33,8 @@
                             NCI Shady Grove | Room 7E412<br>
                         </p>
 
-                        <div class="text-muted">Email: <a href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a>
+                        <div class="text-muted">Email: <a
+                                href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a>
                         </div>
                         <div class="text-muted">Phone: 240-276-7150 </a>
                         </div>
@@ -40,7 +42,7 @@
                 </div>
             </div>
         </div>
-{#    </div>#}
+    </div>
 {% endblock %}
 {% block js_file %}
     {{ block.super }}
