--- a/templates/ctb/material_available.html
+++ b/templates/ctb/material_available.html
@@ -72,7 +72,7 @@
         <tr>
             <td class="text-end">Papillary Carcinoma (incl micro PTC)</td>
             <td class="text-end">2,463</td>
-            <td class="text-start">(2,129)</td>
+            <td class="text-start">(1,793)</td>
         </tr>
         <tr>
             <td class="text-end">Follicular Carcinoma</td>
@@ -100,14 +100,14 @@
             <td class="text-start">(123)</td>
         </tr>
         <tr>
-            <td class="text-end">Miscellaneous Thyroid Tumors&nbsp;<br>(Other and Nodule, TTT)</td>
-            <td class="text-end">460</td>
-            <td class="text-start">(105)</td>
+            <td class="text-end">Miscellaneous Thyroid Tumors<br>(Other and Nodule, TTT)</td>
+            <td class="text-end">150</td>
+            <td class="text-start">(96)</td>
         </tr>
         <tr>
             <td class="text-end">Total</td>
-            <td class="text-end">4,052</td>
-            <td class="text-start">(3,066)</td>
+            <td class="text-end">3,742</td>
+            <td class="text-start">(2,811)</td>
         </tr>
         </tbody>
     </table>
