--- a/templates/accounts/account/password_reset.html
+++ b/templates/accounts/account/password_reset.html
@@ -13,25 +13,28 @@
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
-
-    <div class="row justify-content-center py-5">
-        <div class="col-lg-4 accounts-col">
-            <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-                <div class="card">
-                    <div class="card-header"><h4>Password Reset</h4></div>
-                    <div class="card-body p-5">
-                        <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-primary" type="submit">{% trans "Reset My Password" %}</button>
+    <div class="container">
+        <div class="row justify-content-center py-5">
+            <div class="col-lg-6 accounts-col">
+                <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+                    <div class="card">
+                        <div class="card-header"><h4>Password Reset</h4></div>
+                        <div class="card-body p-5">
+                            <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <div class="d-grid gap-2">
+                                <button class="btn btn-primary" type="submit">{% trans "Reset My Password" %}</button>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            {% blocktrans %}Please contact
+                                <a href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a> if you have any
+                                trouble resetting your password.{% endblocktrans %}
                         </div>
                     </div>
-                    <div class="card-footer">
-                        {% blocktrans %}Please contact <a href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a> if you have any trouble resetting your password.{% endblocktrans %}
-                    </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
 
